--- a/deposits.html
+++ b/deposits.html
@@ -45,11 +45,31 @@ body{
 .topBar .title{font-weight:1000;letter-spacing:.2px}
 .topBar .email{font-weight:900;color:rgba(255,255,255,.8);font-size:13px;max-width:55%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 
-.container{
-  max-width:860px;
-  margin:0 auto;
-}
+.container{max-width:860px;margin:0 auto}
 
+/* ✅ STATS */
+.statsGrid{
+  display:grid;
+  grid-template-columns:repeat(2,1fr);
+  gap:12px;
+  margin-bottom:14px;
+}
+@media(min-width:720px){
+  .statsGrid{grid-template-columns:repeat(4,1fr)}
+}
+.statCard{
+  border:1px solid rgba(255,255,255,.14);
+  border-radius:18px;
+  padding:14px;
+  background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.03));
+  box-shadow:0 20px 80px rgba(0,0,0,.50);
+  backdrop-filter: blur(10px);
+}
+.statLabel{color:rgba(255,255,255,.70);font-size:12px;font-weight:900}
+.statValue{margin-top:8px;font-size:22px;font-weight:1000;letter-spacing:.2px}
+.statHint{margin-top:6px;color:rgba(255,255,255,.45);font-size:12px}
+
+/* Sections */
 .section{
   border:1px solid var(--border);
   border-radius:22px;
@@ -59,30 +79,11 @@ body{
   padding:18px;
   margin-bottom:14px;
 }
-.section h2{
-  margin:0;
-  font-size:26px;
-  font-weight:1000;
-}
-.small{
-  color:var(--muted);
-  font-size:13px;
-  margin-top:8px;
-}
-.grid{
-  display:grid;
-  grid-template-columns:1fr;
-  gap:14px;
-  margin-top:14px;
-}
+.section h2{margin:0;font-size:26px;font-weight:1000}
+.small{color:var(--muted);font-size:13px;margin-top:8px}
+.grid{display:grid;grid-template-columns:1fr;gap:14px;margin-top:14px}
 
-label{
-  display:block;
-  font-weight:900;
-  margin-top:6px;
-  margin-bottom:8px;
-  color:rgba(255,255,255,.85);
-}
+label{display:block;font-weight:900;margin-top:6px;margin-bottom:8px;color:rgba(255,255,255,.85)}
 input,select{
   width:100%;
   padding:16px 14px;
@@ -94,10 +95,7 @@ input,select{
   font-size:15px;
 }
 input::placeholder{color:rgba(255,255,255,.35)}
-input:focus,select:focus{
-  border-color:rgba(99,102,241,.55);
-  box-shadow:0 0 0 4px rgba(99,102,241,.18);
-}
+input:focus,select:focus{border-color:rgba(99,102,241,.55);box-shadow:0 0 0 4px rgba(99,102,241,.18)}
 
 .gradBtn{
   width:100%;
@@ -123,6 +121,7 @@ input:focus,select:focus{
   cursor:pointer;
 }
 .btn:hover{background:rgba(255,255,255,.08)}
+.rightBtn{margin-left:auto}
 
 .copyBox{
   border:1px solid rgba(255,255,255,.12);
@@ -130,94 +129,55 @@ input:focus,select:focus{
   background:rgba(0,0,0,.22);
   padding:14px;
 }
-.addr{
-  font-weight:1000;
-  margin-top:8px;
-  word-break:break-all;
-  font-size:14px;
-}
+.addr{font-weight:1000;margin-top:8px;word-break:break-all;font-size:14px}
 
-/* Tabs like withdrawals */
-.tabs{
-  display:flex;
-  gap:10px;
-  flex-wrap:wrap;
-  margin-top:14px;
-}
+/* Chips */
+.tabs{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
 .chip{
-  padding:9px 14px;
-  border-radius:999px;
+  padding:9px 14px;border-radius:999px;
   border:1px solid rgba(255,255,255,.14);
   background:rgba(0,0,0,.25);
-  font-weight:1000;
-  cursor:pointer;
-  font-size:13px;
+  font-weight:1000;cursor:pointer;font-size:13px
 }
-.chip.active{
-  background:rgba(99,102,241,.25);
-  border-color:rgba(99,102,241,.55);
-}
-.rightBtn{
-  margin-left:auto;
-}
+.chip.active{background:rgba(99,102,241,.25);border-color:rgba(99,102,241,.55)}
 
-/* Table like withdrawals */
+/* Table */
 .tableWrap{
-  margin-top:16px;
-  overflow:auto;
-  border-radius:18px;
-  border:1px solid rgba(255,255,255,.12);
+  margin-top:16px;overflow:auto;
+  border-radius:18px;border:1px solid rgba(255,255,255,.12);
   background:rgba(0,0,0,.22);
 }
 table{width:100%;border-collapse:collapse;min-width:620px}
 th,td{
-  padding:14px 12px;
-  text-align:left;
+  padding:14px 12px;text-align:left;
   border-bottom:1px solid rgba(255,255,255,.10);
   font-size:14px;
 }
-th{
-  color:rgba(255,255,255,.65);
-  font-weight:1000;
-  font-size:13px;
-}
+th{color:rgba(255,255,255,.65);font-weight:1000;font-size:13px}
 
 .pill{
-  display:inline-block;
-  padding:7px 12px;
-  border-radius:999px;
-  font-weight:1000;
-  font-size:12px;
-  border:1px solid rgba(255,255,255,.12);
+  display:inline-block;padding:7px 12px;border-radius:999px;
+  font-weight:1000;font-size:12px;border:1px solid rgba(255,255,255,.12)
 }
 .pPending{background:rgba(250,204,21,.16);border-color:rgba(250,204,21,.38);color:#facc15}
 .pApproved{background:rgba(34,197,94,.16);border-color:rgba(34,197,94,.38);color:#22c55e}
 .pRejected{background:rgba(248,113,113,.14);border-color:rgba(248,113,113,.35);color:#f87171}
 
 .actionBtn{
-  padding:10px 12px;
-  border-radius:14px;
-  font-weight:1000;
-  cursor:pointer;
+  padding:10px 12px;border-radius:14px;font-weight:1000;cursor:pointer;
   background:rgba(255,255,255,.06);
   border:1px solid rgba(255,255,255,.14);
   color:white;
 }
 .actionBtn:hover{background:rgba(255,255,255,.10)}
 
-/* Modal like withdrawals */
+/* Modal */
 .modal{
-  position:fixed;inset:0;
-  background:rgba(0,0,0,.75);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:9999;
+  position:fixed;inset:0;background:rgba(0,0,0,.75);
+  display:none;align-items:center;justify-content:center;z-index:9999;
 }
 .modalBox{
-  width:95%;
-  max-width:560px;
-  border-radius:22px;
+  width:95%;max-width:560px;border-radius:22px;
   border:1px solid rgba(255,255,255,.16);
   background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.03));
   box-shadow:0 26px 90px rgba(0,0,0,.65);
@@ -228,29 +188,17 @@ th{
 .modalRow{margin-bottom:10px;font-size:14px}
 .modalRow span{opacity:.65}
 .closeBtn{
-  width:100%;
-  margin-top:10px;
-  padding:14px;
-  border-radius:16px;
+  width:100%;margin-top:10px;padding:14px;border-radius:16px;
   border:1px solid rgba(255,255,255,.14);
   background:rgba(0,0,0,.28);
-  color:white;
-  font-weight:1000;
-  cursor:pointer;
+  color:white;font-weight:1000;cursor:pointer;
 }
 .pdfBtn{
-  width:100%;
-  margin-top:10px;
-  padding:14px;
-  border-radius:16px;
-  border:none;
+  width:100%;margin-top:10px;padding:14px;border-radius:16px;border:none;
   background:linear-gradient(90deg, #5b6cff, #34d399);
-  color:white;
-  font-weight:1000;
-  cursor:pointer;
+  color:white;font-weight:1000;cursor:pointer;
 }
 
-/* messages */
 .ok{color:#34d399;font-weight:1000}
 .err{color:#f87171;font-weight:1000}
 </style>
@@ -265,7 +213,31 @@ th{
     <div class="email" id="topEmail">Loading…</div>
   </div>
 
-  <!-- Deposit Payment Methods -->
+  <!-- ✅ Stats -->
+  <div class="statsGrid">
+    <div class="statCard">
+      <div class="statLabel">Total Deposits</div>
+      <div class="statValue" id="statTotal">0</div>
+      <div class="statHint">All confirmations</div>
+    </div>
+    <div class="statCard">
+      <div class="statLabel">Pending</div>
+      <div class="statValue" id="statPending">0</div>
+      <div class="statHint">Awaiting verification</div>
+    </div>
+    <div class="statCard">
+      <div class="statLabel">Approved</div>
+      <div class="statValue" id="statApproved">0</div>
+      <div class="statHint">Verified deposits</div>
+    </div>
+    <div class="statCard">
+      <div class="statLabel">Rejected</div>
+      <div class="statValue" id="statRejected">0</div>
+      <div class="statHint">Declined confirmations</div>
+    </div>
+  </div>
+
+  <!-- Deposit -->
   <div class="section">
     <h2>Deposit</h2>
     <div class="small">Select asset + network to view your deposit wallet address.</div>
@@ -301,7 +273,7 @@ th{
     </div>
   </div>
 
-  <!-- Submit Proof -->
+  <!-- Proof -->
   <div class="section">
     <h2>Submit Deposit Proof</h2>
     <div class="small">After sending your deposit, upload proof for verification.</div>
@@ -386,7 +358,7 @@ th{
 
 </div>
 
-<!-- Details Modal -->
+<!-- Modal -->
 <div class="modal" id="detailsModal">
   <div class="modalBox">
     <h3 class="modalTitle">Deposit Details</h3>
@@ -416,7 +388,6 @@ let cache=[];
 let searchTerm="";
 let currentDetails=null;
 
-/* UI */
 function goDashboard(){ window.location.href="user-dashboard.html"; }
 function setMsg(html){ document.getElementById("msg").innerHTML = html; }
 function showDepMsg(html){ document.getElementById("depMsg").innerHTML = html; }
@@ -426,6 +397,19 @@ function statusPill(status){
   if(s==="approved") return `<span class="pill pApproved">APPROVED</span>`;
   if(s==="rejected") return `<span class="pill pRejected">REJECTED</span>`;
   return `<span class="pill pPending">PENDING</span>`;
+}
+
+/* ✅ Update stats */
+function updateStats(){
+  const total = cache.length;
+  const pending = cache.filter(x => (x.status||"").toLowerCase()==="pending").length;
+  const approved = cache.filter(x => (x.status||"").toLowerCase()==="approved").length;
+  const rejected = cache.filter(x => (x.status||"").toLowerCase()==="rejected").length;
+
+  document.getElementById("statTotal").innerText = total;
+  document.getElementById("statPending").innerText = pending;
+  document.getElementById("statApproved").innerText = approved;
+  document.getElementById("statRejected").innerText = rejected;
 }
 
 /* Deposit address */
@@ -449,7 +433,7 @@ function copyAddress(){
   alert("Copied ✅");
 }
 
-/* Badge clear */
+/* Clear badge */
 async function clearDepositBadge(){
   try{
     const { data: sessionData } = await supabaseClient.auth.getSession();
@@ -468,7 +452,7 @@ async function clearDepositBadge(){
   }catch(e){ console.log(e); }
 }
 
-/* Load history */
+/* Render rows */
 function renderRows(){
   const tbody=document.getElementById("rows");
 
@@ -502,8 +486,11 @@ function renderRows(){
       <td><button class="actionBtn" onclick='openModal(${JSON.stringify(d)})'>View</button></td>
     </tr>
   `).join("");
+
+  updateStats();
 }
 
+/* Load history */
 async function loadHistory(reset=false){
   if(reset){ offset=0; cache=[]; }
 
@@ -528,7 +515,7 @@ async function loadHistory(reset=false){
   offset += limit;
 }
 
-/* Realtime status updates */
+/* Realtime */
 function initRealtime(){
   supabaseClient
     .channel("realtime-deposits-user")
@@ -541,7 +528,7 @@ function initRealtime(){
     .subscribe();
 }
 
-/* Submit deposit */
+/* Submit */
 async function submitDeposit(){
   try{
     showDepMsg(`<span class="small">Submitting…</span>`);
@@ -589,11 +576,9 @@ async function submitDeposit(){
     }
 
     showDepMsg(`<span class="ok">Deposit submitted ✅</span>`);
-
     document.getElementById("confAmount").value="";
     document.getElementById("confTx").value="";
     document.getElementById("confProof").value="";
-
     await loadHistory(true);
   }catch(e){
     showDepMsg(`<span class="err">Error: ${e?.message || String(e)}</span>`);
@@ -621,7 +606,7 @@ function closeModal(){ document.getElementById("detailsModal").style.display="no
 window.openModal=openModal;
 window.closeModal=closeModal;
 
-/* PDF receipt */
+/* PDF */
 document.getElementById("downloadPdfBtn").addEventListener("click", ()=>{
   if(!currentDetails) return;
   const { jsPDF } = window.jspdf;
@@ -644,10 +629,7 @@ document.getElementById("downloadPdfBtn").addEventListener("click", ()=>{
   ].filter(Boolean);
 
   let y=30;
-  for(const line of lines){
-    doc.text(String(line), 14, y);
-    y+=8;
-  }
+  for(const line of lines){ doc.text(String(line), 14, y); y+=8; }
   doc.text("Thank you for using Coinluxora.", 14, y+12);
 
   doc.save(`coinluxora-deposit-${currentDetails.id}.pdf`);
