--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -10,23 +10,16 @@
 <style>
 :root{
   --bg:#050a18;
-  --card:rgba(255,255,255,.06);
-  --card2:rgba(255,255,255,.04);
   --stroke:rgba(255,255,255,.12);
   --text:#eaf0ff;
   --muted:rgba(234,240,255,.65);
-  --muted2:rgba(234,240,255,.42);
-
-  --blue:#5b6cff;
-  --blue2:#38bdf8;
-  --purple:#7c4dff;
-  --green:#34d399;
 
   --ok:#22c55e;
   --err:#f87171;
 
-  --pending:#9e6816;
-  --rejected:#783122;
+  --blue:#5b6cff;
+  --purple:#7c4dff;
+  --green:#34d399;
 }
 
 *{box-sizing:border-box}
@@ -41,7 +34,6 @@ body{
   padding:16px;
   padding-bottom:96px;
 }
-
 .container{max-width:920px;margin:0 auto}
 
 /* ====== TOP BAR ====== */
@@ -52,7 +44,6 @@ body{
   gap:12px;
   margin-bottom:14px;
 }
-
 .brand{
   display:flex;align-items:center;gap:12px;
   padding:12px 14px;
@@ -72,7 +63,6 @@ body{
   display:grid;place-items:center;
   font-weight:1000;
 }
-
 .headerActions{display:flex;gap:10px;align-items:center}
 .iconBtn{
   width:46px;height:46px;border-radius:999px;
@@ -90,7 +80,7 @@ body{
   border:none;
 }
 
-/* ====== HELLO CARD (premium banner) ====== */
+/* ====== HELLO CARD ====== */
 .helloCard{
   border-radius:18px;
   padding:14px 14px;
@@ -102,7 +92,6 @@ body{
   justify-content:space-between;
   gap:12px;
 }
-
 .helloLeft{display:flex;align-items:center;gap:12px}
 .helloLogo{
   width:46px;height:46px;border-radius:16px;
@@ -111,7 +100,6 @@ body{
   display:grid;place-items:center;
   font-weight:1000;
 }
-
 .chips{display:flex;gap:8px;flex-wrap:wrap;margin-bottom:6px}
 .miniChip{
   font-size:12px;font-weight:1000;
@@ -122,7 +110,6 @@ body{
 }
 .helloTitle{font-weight:1000;font-size:18px}
 .helloSub{font-size:12px;font-weight:900;opacity:.92}
-
 .helloRight{display:flex;align-items:center;gap:10px}
 .idChip{
   padding:8px 12px;border-radius:999px;
@@ -139,20 +126,34 @@ body{
   box-shadow:0 16px 40px rgba(239,68,68,.22);
 }
 
-/* ====== GLASS BOX ====== */
-.box{
-  border:1px solid rgba(255,255,255,.12);
-  border-radius:22px;
-  padding:16px;
+/* ✅ TradingView Ticker (iframe method = always works) */
+.tickerFloat{
+  margin-top:12px;
+  border-radius:18px;
+  border:1px solid rgba(255,255,255,.14);
   background:linear-gradient(180deg, rgba(255,255,255,.07), rgba(255,255,255,.03));
-  box-shadow:0 26px 90px rgba(0,0,0,.55);
+  box-shadow:0 22px 70px rgba(0,0,0,.48);
   backdrop-filter: blur(12px);
-  margin-top:14px;
+  overflow:hidden;
 }
-.box h2{margin:0;font-size:20px;font-weight:1000}
-.small{color:var(--muted);font-size:13px;margin-top:8px}
-.ok{color:var(--ok);font-weight:1000}
-.err{color:var(--err);font-weight:1000}
+.tickerHeader{
+  padding:10px 12px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  border-bottom:1px solid rgba(255,255,255,.10);
+  color:rgba(234,240,255,.78);
+  font-weight:1000;
+  font-size:13px;
+}
+.tickerHint{color:rgba(234,240,255,.50);font-size:12px;font-weight:900}
+.tickerFrame{
+  width:100%;
+  height:54px;
+  border:0;
+  display:block;
+  background:transparent;
+}
 
 /* ====== BALANCE PREMIUM CARD ====== */
 .balanceCard{
@@ -195,9 +196,7 @@ body{
   align-items:center;justify-content:center;
   gap:8px;
   cursor:pointer;
-  transition: transform .12s ease, background .12s ease;
 }
-.action:hover{transform:translateY(-1px);background:rgba(255,255,255,.10)}
 .aIcon{
   width:48px;height:48px;border-radius:999px;
   display:grid;place-items:center;
@@ -210,7 +209,21 @@ body{
 .aSupport{background:linear-gradient(180deg,#38bdf8,#5b6cff)}
 .aText{font-weight:1000;font-size:13px}
 
-/* ====== GRID / CARDS ====== */
+/* ====== GLASS BOX ====== */
+.box{
+  border:1px solid rgba(255,255,255,.12);
+  border-radius:22px;
+  padding:16px;
+  background:linear-gradient(180deg, rgba(255,255,255,.07), rgba(255,255,255,.03));
+  box-shadow:0 26px 90px rgba(0,0,0,.55);
+  backdrop-filter: blur(12px);
+  margin-top:14px;
+}
+.box h2{margin:0;font-size:20px;font-weight:1000}
+.small{color:var(--muted);font-size:13px;margin-top:8px}
+.ok{color:var(--ok);font-weight:1000}
+.err{color:var(--err);font-weight:1000}
+
 .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:10px;margin-top:12px}
 .card{
   border:1px solid rgba(255,255,255,.12);
@@ -223,22 +236,6 @@ body{
   .grid{grid-template-columns:1fr}
   .actionGrid{grid-template-columns:repeat(2,1fr)}
 }
-.card strong{font-weight:1000}
-
-/* PLAN PILL */
-.pill{
-  padding:6px 10px;border-radius:999px;
-  font-weight:1000;font-size:12px;display:inline-block;
-  border:1px solid rgba(255,255,255,.12);
-}
-.pending{background:rgba(158,104,22,.20);border-color:rgba(158,104,22,.45);color:#ffd6a1}
-.active{background:rgba(56,189,248,.18);border-color:rgba(56,189,248,.35);color:#a7ecff}
-.completed{background:rgba(34,197,94,.18);border-color:rgba(34,197,94,.35);color:#86efac}
-.rejected{background:rgba(120,49,34,.22);border-color:rgba(120,49,34,.45);color:#ffb7aa}
-
-/* LINKS */
-a{color:#9bdcff;text-decoration:none;font-weight:1000}
-a:hover{text-decoration:underline}
 
 /* ===== SIDEBAR ===== */
 .overlay{
@@ -259,7 +256,6 @@ a:hover{text-decoration:underline}
 }
 .sidebar.open{ left:0; }
 .overlay.show{ display:block; }
-
 .brandRow{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
 .brandSide{font-weight:1000;font-size:18px;letter-spacing:.6px;}
 .closeBtn{
@@ -283,6 +279,7 @@ a:hover{text-decoration:underline}
   color:var(--text);
   background:rgba(0,0,0,.22);
   font-weight:1000;
+  text-decoration:none;
 }
 .sideItem:hover{background:rgba(255,255,255,.08)}
 .activeLink{border:1px solid rgba(56,189,248,.55);background:rgba(56,189,248,0.12);}
@@ -309,7 +306,6 @@ a:hover{text-decoration:underline}
   font-size:12px;font-weight:1000;
   padding:10px 0;border-radius:16px;cursor:pointer;
   position:relative;
-  transition: background .15s ease, color .15s ease;
 }
 .navItem span{font-size:18px;margin-bottom:4px}
 .navActive{color:#9bdcff;background:rgba(56,189,248,0.10)}
@@ -337,7 +333,6 @@ a:hover{text-decoration:underline}
 
 <body>
 
-<!-- OVERLAY + SIDEBAR -->
 <div id="overlay" class="overlay" onclick="closeMenu()"></div>
 
 <div id="sidebar" class="sidebar">
@@ -364,7 +359,6 @@ a:hover{text-decoration:underline}
 
 <div class="container">
 
-  <!-- Premium top -->
   <div class="topRow">
     <div class="brand">
       <div class="brandIcon">📣</div>
@@ -377,11 +371,9 @@ a:hover{text-decoration:underline}
     </div>
   </div>
 
-  <!-- Premium Hello Banner -->
   <div class="helloCard">
     <div class="helloLeft">
       <div class="helloLogo">📶</div>
-
       <div>
         <div class="chips">
           <div class="miniChip">🟢 active</div>
@@ -398,16 +390,20 @@ a:hover{text-decoration:underline}
     </div>
   </div>
 
-  <!--i.<!-- Balance premium -->
+  <!-- ✅ Working TradingView moving ticker -->
+  <div class="tickerFloat">
+    <div class="tickerHeader">
+      <div>Live Market Prices</div>
+      <div class="tickerHint">TradingView</div>
+    </div>
+    <iframe class="tickerFrame" src="tv-ticker.html"></iframe>
+  </div>
+
   <div class="balanceCard">
     <div class="bTitle">Total Portfolio Value</div>
     <div class="bValue" id="balance">--</div>
-    <div class="bHint">
-      <div class="dot"></div>
-      <div>Your trading account balance</div>
-    </div>
+    <div class="bHint"><div class="dot"></div> <div>Your trading account balance</div></div>
 
-    <!-- Action grid -->
     <div class="actionGrid">
       <div class="action" onclick="goWithdrawAndClear()">
         <div class="aIcon aSend">✈️</div>
@@ -428,14 +424,12 @@ a:hover{text-decoration:underline}
     </div>
   </div>
 
-  <!-- Active plan -->
   <div class="box">
     <h2>Active Investment Plan</h2>
     <div id="planMsg" class="small">Loading…</div>
     <div id="planBox"></div>
   </div>
 
-  <!-- Prices -->
   <div class="box">
     <h2>Live Crypto Prices</h2>
     <div class="grid" id="prices"><div class="card">Loading…</div></div>
@@ -443,7 +437,6 @@ a:hover{text-decoration:underline}
 
 </div>
 
-<!-- BOTTOM NAV -->
 <div class="bottomNav">
   <div class="navItem navActive" onclick="goHome()"><span>🏠</span>Home</div>
 
@@ -468,7 +461,6 @@ a:hover{text-decoration:underline}
 <script>
 const SUPABASE_URL="https://xdcscknfomlzwysczegc.supabase.co";
 const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjMwM30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
-
 const EDGE_CLEAR_BADGE_URL = `${SUPABASE_URL}/functions/v1/clear_badge`;
 const supabaseClient=supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
@@ -518,7 +510,6 @@ function setBadgeFromKey(badge_key, badge_value){
 
 async function loadRealtimeBadgesOnce(){
   if(!currentUserId) return;
-
   setBadge("badgeDeposit", 0);
   setBadge("badgeWithdraw", 0);
   setBadge("badgeSupport", 0);
@@ -538,7 +529,6 @@ async function loadRealtimeBadgesOnce(){
 
 function subscribeToRealtimeBadges(){
   if(!currentUserId) return;
-
   if(badgeChannel){
     supabaseClient.removeChannel(badgeChannel);
     badgeChannel=null;
@@ -556,7 +546,7 @@ function subscribeToRealtimeBadges(){
       if(!row) return;
       setBadgeFromKey(row.badge_key, row.badge_value);
     })
-    .subscribe(status => console.log("Badge realtime status:", status));
+    .subscribe();
 }
 
 async function clearBadge(badge_key){
