--- a/plans.html
+++ b/plans.html
@@ -46,6 +46,28 @@ body{
 
 .container{max-width:980px;margin:0 auto}
 
+/* ✅ Sticky Back Button */
+.stickyBack{
+  position:sticky;
+  top:12px;
+  z-index:9999;
+  display:flex;
+  justify-content:flex-start;
+  margin-bottom:12px;
+}
+.backBtn{
+  padding:12px 14px;
+  border-radius:14px;
+  border:1px solid rgba(255,255,255,.14);
+  background:linear-gradient(180deg, rgba(255,255,255,.09), rgba(255,255,255,.04));
+  color:white;
+  font-weight:1000;
+  cursor:pointer;
+  backdrop-filter: blur(12px);
+  box-shadow:0 20px 70px rgba(0,0,0,.55);
+}
+.backBtn:hover{background:rgba(255,255,255,.08)}
+
 /* Top bar */
 .topBar{
   display:flex;
@@ -67,16 +89,6 @@ body{
 }
 
 .btnRow{display:flex;gap:10px;align-items:center;flex-wrap:wrap;justify-content:flex-end}
-.btn{
-  padding:12px 14px;
-  border-radius:14px;
-  border:1px solid rgba(255,255,255,.12);
-  background:rgba(0,0,0,.25);
-  color:white;
-  font-weight:1000;
-  cursor:pointer;
-}
-.btn:hover{background:rgba(255,255,255,.08)}
 .gradBtn{
   border:none;
   padding:12px 16px;
@@ -166,33 +178,16 @@ body{
 }
 .planInner{position:relative;z-index:2}
 
-.planTitle{
-  font-size:20px;
-  font-weight:1000;
-  letter-spacing:.2px;
-}
-.planSub{
-  margin-top:6px;
-  color:rgba(255,255,255,.65);
-  font-size:13px;
-  font-weight:900;
-}
+.planTitle{font-size:20px;font-weight:1000;letter-spacing:.2px}
+.planSub{margin-top:6px;color:rgba(255,255,255,.65);font-size:13px;font-weight:900}
 
 /* Chips */
-.chips{
-  display:flex;
-  flex-wrap:wrap;
-  gap:10px;
-  margin-top:14px;
-}
+.chips{display:flex;flex-wrap:wrap;gap:10px;margin-top:14px}
 .chip{
-  padding:8px 12px;
-  border-radius:999px;
-  font-weight:1000;
-  font-size:12px;
+  padding:8px 12px;border-radius:999px;
+  font-weight:1000;font-size:12px;
   border:1px solid rgba(255,255,255,.14);
-  background:rgba(0,0,0,.22);
-  color:white;
+  background:rgba(0,0,0,.22);color:white;
 }
 .chip.blue{background:rgba(91,108,255,.18);border-color:rgba(91,108,255,.40)}
 .chip.green{background:rgba(34,197,94,.16);border-color:rgba(34,197,94,.38)}
@@ -200,29 +195,17 @@ body{
 .chip.red{background:rgba(248,113,113,.14);border-color:rgba(248,113,113,.35)}
 
 input{
-  width:100%;
-  padding:16px 14px;
-  border-radius:16px;
+  width:100%;padding:16px 14px;border-radius:16px;
   border:1px solid rgba(255,255,255,.10);
-  background:rgba(0,0,0,.32);
-  color:var(--text);
-  outline:none;
-  font-size:15px;
-  margin-top:14px;
+  background:rgba(0,0,0,.32);color:var(--text);
+  outline:none;font-size:15px;margin-top:14px;
 }
 input::placeholder{color:rgba(255,255,255,.35)}
 input:focus{border-color:rgba(99,102,241,.55);box-shadow:0 0 0 4px rgba(99,102,241,.18)}
 
 .startBtn{
-  width:100%;
-  margin-top:12px;
-  padding:16px 14px;
-  border:none;
-  border-radius:16px;
-  cursor:pointer;
-  font-weight:1000;
-  font-size:15px;
-  color:white;
+  width:100%;margin-top:12px;padding:16px 14px;border:none;border-radius:16px;
+  cursor:pointer;font-weight:1000;font-size:15px;color:white;
   background:linear-gradient(90deg, #5b6cff, #34d399);
   box-shadow:0 18px 60px rgba(0,0,0,.45);
 }
@@ -230,9 +213,7 @@ input:focus{border-color:rgba(99,102,241,.55);box-shadow:0 0 0 4px rgba(99,102,2
 
 /* Summary */
 .summaryCard{
-  margin-top:14px;
-  border-radius:22px;
-  padding:16px;
+  margin-top:14px;border-radius:22px;padding:16px;
   border:1px solid rgba(255,255,255,.12);
   background:
     radial-gradient(900px 400px at 15% 20%, rgba(0,0,0,0.55), transparent 55%),
@@ -249,21 +230,14 @@ input:focus{border-color:rgba(99,102,241,.55);box-shadow:0 0 0 4px rgba(99,102,2
 .line span{opacity:.65}
 .actionsRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
 .actionBtn{
-  padding:12px 14px;
-  border-radius:14px;
-  font-weight:1000;
-  cursor:pointer;
-  background:rgba(255,255,255,.06);
-  border:1px solid rgba(255,255,255,.14);
-  color:white;
+  padding:12px 14px;border-radius:14px;font-weight:1000;cursor:pointer;
+  background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.14);color:white;
 }
 .actionBtn:hover{background:rgba(255,255,255,.10)}
 
 /* Status pill */
 .pill{
-  display:inline-block;
-  padding:8px 12px;border-radius:999px;
-  font-weight:1000;font-size:12px;
+  display:inline-block;padding:8px 12px;border-radius:999px;font-weight:1000;font-size:12px;
   border:1px solid rgba(255,255,255,.14);
 }
 .pPending{background:rgba(250,204,21,.16);border-color:rgba(250,204,21,.38);color:#facc15}
@@ -307,6 +281,11 @@ a:hover{text-decoration:underline}
 <body>
 <div class="container">
 
+  <!-- ✅ STICKY BACK BTN TOP LEFT -->
+  <div class="stickyBack">
+    <button class="backBtn" onclick="goDashboard()">← Dashboard</button>
+  </div>
+
   <!-- TOP -->
   <div class="topBar">
     <div>
@@ -319,13 +298,12 @@ a:hover{text-decoration:underline}
     <div style="display:flex;flex-direction:column;align-items:flex-end;gap:8px;min-width:220px">
       <div class="email" id="topEmail">Loading…</div>
       <div class="btnRow">
-        <button class="btn" onclick="goDashboard()">← Dashboard</button>
         <button class="gradBtn" onclick="scrollToPlans()">Choose Plan</button>
       </div>
     </div>
   </div>
 
-  <!-- ✅ STATS -->
+  <!-- STATS -->
   <div class="statsGrid">
     <div class="statCard">
       <div class="statLabel">Total Plans</div>
@@ -356,7 +334,7 @@ a:hover{text-decoration:underline}
   <!-- ACTIVE -->
   <div class="section">
     <h2>My Active Plan</h2>
-    <div id="activeMsg" class="small">Loading…</div>
+    <!-- ✅ Removed "Active plan loaded ✅" message -->
     <div id="activePlan"></div>
   </div>
 
@@ -413,7 +391,7 @@ function statusPill(status){
   return `<span class="pill pPending">PENDING</span>`;
 }
 
-/* ✅ Stats update */
+/* Stats */
 function updateStats(){
   const total = plansCache.length;
   const pending = plansCache.filter(x => (x.status||"").toLowerCase()==="pending").length;
@@ -433,7 +411,7 @@ function updateStats(){
   document.getElementById("barCompleted").style.width = pct(completed) + "%";
 }
 
-/* render plan cards */
+/* render */
 function renderPlans(){
   const wrapper=document.getElementById("plansList");
   wrapper.innerHTML="";
@@ -464,7 +442,6 @@ function renderPlans(){
   });
 }
 
-/* load all plans for stats */
 async function loadPlansForStats(){
   const { data, error } = await supabaseClient
     .from("investment_plans")
@@ -472,18 +449,12 @@ async function loadPlansForStats(){
     .eq("user_email", currentUserEmail)
     .order("created_at", {ascending:false});
 
-  if(error){
-    console.log("plans load error:", error.message);
-    plansCache=[];
-  }else{
-    plansCache = data || [];
-  }
+  plansCache = (!error && data) ? data : [];
   updateStats();
 }
 
-/* load active plan summary */
+/* active plan */
 async function loadActivePlan(){
-  const activeMsg=document.getElementById("activeMsg");
   const activePlan=document.getElementById("activePlan");
 
   const { data, error } = await supabaseClient
@@ -495,20 +466,16 @@ async function loadActivePlan(){
     .limit(1);
 
   if(error){
-    activeMsg.innerHTML="<span class='err'>"+error.message+"</span>";
-    activePlan.innerHTML="";
+    activePlan.innerHTML = `<div class="small err">${error.message}</div>`;
     return;
   }
 
   if(!data || data.length===0){
-    activeMsg.innerHTML="<span class='warn'>No active plan yet.</span> <span class='small'>Choose a plan below to start.</span>";
-    activePlan.innerHTML="";
+    activePlan.innerHTML = `<div class="small warn">No active plan yet. Choose a plan below to start.</div>`;
     return;
   }
 
   const plan=data[0];
-  activeMsg.innerHTML="<span class='ok'>Active plan loaded ✅</span>";
-
   const amount = Number(plan.amount||0);
   const roi = Number(plan.roi_percent||0);
   const expectedReturn = amount + (amount * (roi/100));
@@ -547,7 +514,7 @@ async function loadActivePlan(){
   `;
 }
 
-/* start plan */
+/* start */
 async function startPlan(index){
   const msg=document.getElementById("msg");
   msg.innerHTML="Starting plan…";
@@ -560,7 +527,6 @@ async function startPlan(index){
     return;
   }
 
-  // check existing active/pending
   const { data:existing } = await supabaseClient
     .from("investment_plans")
     .select("id,status")
@@ -591,7 +557,7 @@ async function startPlan(index){
   loadActivePlan();
 }
 
-/* ✅ Realtime */
+/* realtime */
 function initRealtimePlans(){
   if(plansChannel){
     supabaseClient.removeChannel(plansChannel);
@@ -612,7 +578,7 @@ function initRealtimePlans(){
     .subscribe();
 }
 
-/* Modal */
+/* modal */
 function openModal(plan){
   currentPlanDetails=plan;
   document.getElementById("planModalBody").innerHTML = `
@@ -665,7 +631,7 @@ document.getElementById("downloadPlanPdfBtn").addEventListener("click", ()=>{
   doc.save(`coinluxora-plan-${currentPlanDetails.id}.pdf`);
 });
 
-/* Init */
+/* init */
 async function init(){
   const { data:userData } = await supabaseClient.auth.getUser();
   if(!userData.user){
